working on paper